# graphlet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo_auto_partition.py  demo_capture.py  demo_dce.py  demo_hybrid.py  demo_region_jit.py
graphlet/: __init__.py  compiler.py  debug.py  graph.py  passes.py  runtime.py
graphlet/capture/: __init__.py  autopartition.py  bytecode_capture.py  frame_eval.py  region_jit.py
tests/: conftest.py  test_capture.py  test_constfold.py  test_dce.py  test_graph.py
